Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* configure.in : Post release bump

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2003-01-08  Rajkumar Sivasamy  <rajkumar.siva@wipro.com>

	* capplets/common/capplet-stock-icons.[ch]: Utility file to register 
	the images used by capplets as stock-icons

	* capplets/common/Makefile.am: Changes to include the above file

	* capplets/keyboard/gnome-keyboard-properties.c:
	* capplets/accessibility/keyboard/accessibility-keyboard.c:
	Use stock-icons

	* capplets/mouse/Makefile.am:
	* capplets/mouse/gnome-mouse-properties.c:
	Use stock-icons. Also register the icons through capplet-stock-icons.[ch]
	instead of doing it here.

	Fixes Bug 101977

2002-11-29  Remi Cohen-Scali  <remi@cohen-scali.com>

	Reviewed by: Jody Goldberg <jody@gnome.org>

	* capplets/theme-switcher/gnome-theme-manager.c (drag_data_received_cb):
	Add a test to detect is uri is local. If not use full URI instead
	of just the path in order to be able to download remote tarballs.
	Fixes #97983.

2003-01-05  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in: Added Amharic (am) and Macedonian (mk) to ALL_LINGUAS

2002-12-30  Jody Goldberg <jody@gnome.org>

	* README : http://bugzilla.gnome.org/show_bug.cgi?id=100916

2002-12-18  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-12-17  Alex Duggan  <aldug@gnome.org>

	* schemas/desktop_gnome_font_rendering.schemas.in: fixed more typos

2002-12-15  Andrew Sobala  <andrew@sobala.net>

	* schemas/desktop_gnome_font_rendering.schemas.in: fixed typos

2002-12-10  Chema Celorio  <chema@celorio.com>

	* configure.in: remove autoheader warnings, remove acconfig.h

2002-12-10  Dennis Cranston  <dennis_cranston@yahoo.com>
 